# 0327_django

./: .gitignore  manage.py  pyproject.toml
.github/workflows/: cl.yml
oz_django_0327/: asgi.py  settings.py  urls.py  wsgi.py
